--- a/css/bookall.css
+++ b/css/bookall.css
@@ -7,7 +7,7 @@ html,body{width:100%;height:100%;}
 	border:1dx solid #CFAC66;
 	}
 
-.head-box input{
+.head-box search{
 	width:500px;height:50px;
 	margin:0 0 0 180px;
 	border:4px solid rgba(0,0,0,.4);
@@ -76,7 +76,14 @@ height:600px;}
 	margin:50px auto 0 auto;
 	box-shadow:0 4px 3px rgba(0,0,0,0.4);
 }
-
+.table{
+	margin:0 0 0 20px;
+	table-layout: fixed;
+	word-break: break-all;
+	 word-wrap: break-word;
+	width:1500px;
+	text-align:center;
+	}
 .book-box .box-title{
 	height: 64px;
 	line-height: 66px;
